Project

General

Profile

Actions

Bug #10687

closed

Service routine cast changes need smatch fixes

Added by John Levon over 4 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
2019-04-03
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
smatch needs-triage
Gerrit CR:
External Bug:

Description

We now need to cast a bunch of service routine callers to ignore the return value.

Actions #1

Updated by John Levon over 4 years ago

  • Tags changed from needs-triage to smatch needs-triage
Actions #2

Updated by Electric Monk over 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 78a53e201c2691debc57ede24c524118299ab18c

commit  78a53e201c2691debc57ede24c524118299ab18c
Author: John Levon <john.levon@joyent.com>
Date:   2019-04-12T06:25:44.000Z

    10687 Service routine cast changes need smatch fixes
    Reviewed by: Gergő Doma <domag02@gmail.com>
    Approved by: Richard Lowe <richlowe@richlowe.net>

Actions

Also available in: Atom PDF